# criterion-single-page-html

./: Cargo.toml  README.md
demo/: index.html  ooo.html
demo/x/: foo.html
demo/y/: bar.html
demo/y/z/: baz.html
src/: main.rs  types.rs
templates/: template.html
