[package]
name = "criterion-single-page-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["serde", "serde-yaml"] }
base64 = "0.21.3"
clap = { version = "4.4.2", features = ["env", "derive"] }
color-eyre = "0.6.2"
fs-err = "2.9.0"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
sha2 = "0.10.7"
