[package]
name = "criterion-single-page-html"
version = "0.0.1"
edition = "2021"
author = "Bernhard Schuster <bernhard@ahoi.io>"
license = "MIT OR Apache-2.0 OR MPL-2.0"
repository = "https://github.com/drahnr/criterion-single-page-html"
description = "Collect criterion generated html files and provide them as a single html file, servable from s3 into your browser."
keywords = ["single", "html", "criterion", "onepage", "s3"]
categories = ["command-line-utilities", "development-tools::profiling"]
[dependencies]
askama = { version = "0.12.0", features = ["serde", "serde-yaml"] }
base64 = "0.21.3"
clap = { version = "4.4.2", features = ["env", "derive"] }
color-eyre = "0.6.2"
fs-err = "2.9.0"
hex = { version = "0.4.3", features = ["serde"] }
html5ever = "0.26.0"
log = "0.4.20"
markup5ever_rcdom = "0.2.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.7"
